log
Thu May  5 15:21:34 UTC 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:22:10: error: ‘heapArray’ undeclared (first use in this function)
   return heapArray[0];
          ^~~~~~~~~
heap.c:22:10: note: each undeclared identifier is reported only once for each function it appears in
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
aba6bf4
Thu May  5 15:25:08 UTC 2022: 
 heap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:28:9: error: ‘pq’ is a pointer; did you mean to use ‘->’?
   if( pq.size == pq.capac){
         ^
         ->
heap.c:28:20: error: ‘pq’ is a pointer; did you mean to use ‘->’?
   if( pq.size == pq.capac){
                    ^
                    ->
heap.c:29:7: error: ‘pq’ is a pointer; did you mean to use ‘->’?
     pq.heapArray = realloc(pq.heapArray, (pq.capac*2)+1);
       ^
       ->
heap.c:29:30: error: ‘pq’ is a pointer; did you mean to use ‘->’?
     pq.heapArray = realloc(pq.heapArray, (pq.capac*2)+1);
                              ^
                              ->
heap.c:29:45: error: ‘pq’ is a pointer; did you mean to use ‘->’?
     pq.heapArray = realloc(pq.heapArray, (pq.capac*2)+1);
                                             ^
                                             ->
Compilation failed
91cb312
Thu May  5 15:25:35 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 0/70
cf32a60
Thu May  5 15:28:31 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_pop’:
heap.c:36:1: error: expected ‘;’ before ‘}’ token
 }
 ^
Compilation failed
f5ebbbb
Thu May  5 15:28:43 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
46f3318
Thu May  5 15:31:24 UTC 2022: 
 heap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:0:
heap.c: In function ‘heap_pop’:
heap.c:40:27: error: incompatible types when assigning to type ‘heapElem {aka struct nodo}’ from type ‘void *’
   pq->heapArray[pq->size] = NULL;
                           ^
Compilation failed
0e13865
